package edu.hitsz.factory;

public interface AbstractPropFactory {
    public abstract FlyingObjectProduct produceFlyingObjectProduct();

}
