package edu.hitsz.factory;

public interface FlyingObjectProduct {
}
